Add new config options